Added Membership filter to Organizations
